--- a/css/style.css
+++ b/css/style.css
@@ -47,13 +47,13 @@ body {
 }
 
 a {
-  color: #66D37E;
+  color: #0bd8bc;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 a:hover, a:active, a:focus {
-  color: #66D37E;
+  color: #0bd8bc;
   outline: none;
   text-decoration: none;
 }
@@ -71,17 +71,17 @@ h1, h2, h3, h4, h5, h6, figure {
 
 ::-webkit-selection {
   color: #fff;
-  background: #66D37E;
+  background: #0bd8bc;
 }
 
 ::-moz-selection {
   color: #fff;
-  background: #66D37E;
+  background: #0bd8bc;
 }
 
 ::selection {
   color: #fff;
-  background: #66D37E;
+  background: #0bd8bc;
 }
 
 .container-wrap {
@@ -116,12 +116,11 @@ h1, h2, h3, h4, h5, h6, figure {
   font-size: 24px;
   margin: 0;
   padding: 0;
-  text-transform: uppercase;
-  font-weight: 600;
-  font-family: "Source Sans Pro", sans-serif;
-}
+  font-family: 'Roboto Slap';
+  font-weight: 700;
+  }
 .fh5co-nav #fh5co-logo a span {
-  color: #66D37E;
+  color: #0bd8bc;
 }
 .fh5co-nav a {
   padding: 5px 10px;
@@ -163,7 +162,7 @@ h1, h2, h3, h4, h5, h6, figure {
   content: '';
   width: 58%;
   height: 2px;
-  background: #66D37E;
+  background: #0bd8bc;
   margin: 0 auto;
   opacity: 0;
   -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
@@ -244,7 +243,7 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #fff;
 }
 .fh5co-nav ul li.btn-cta a span {
-  background: #66d37e;
+  background: #0bd8bc;
   padding: 4px 10px;
   display: -moz-inline-stack;
   display: inline-block;
@@ -388,7 +387,7 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-hero .flexslider .flex-control-nav li a.flex-active {
   cursor: pointer;
   background: transparent;
-  border: 2px solid #66D37E;
+  border: 2px solid #0bd8bc;
 }
 #fh5co-hero .flexslider .flex-direction-nav {
   display: none;
@@ -946,7 +945,7 @@ input[type="text"] {
   display: inline-block;
   zoom: 1;
   *display: inline;
-  color: #66D37E;
+  color: #0bd8bc;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -1269,21 +1268,21 @@ input[type="text"] {
 }
 
 .btn-primary {
-  background: #66D37E;
+  background: #0bd8bc;
   color: #fff;
-  border: 2px solid #66D37E;
+  border: 2px solid #0bd8bc;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  background: #7ad98f !important;
-  border-color: #7ad98f !important;
+  background: #22f5d8 !important;
+  border-color: #22f5d8 !important;
 }
 .btn-primary.btn-outline {
   background: transparent;
-  color: #66D37E;
-  border: 2px solid #66D37E;
+  color: #0bd8bc;
+  border: 2px solid #0bd8bc;
 }
 .btn-primary.btn-outline:hover, .btn-primary.btn-outline:focus, .btn-primary.btn-outline:active {
-  background: #66D37E;
+  background: #0bd8bc;
   color: #fff;
 }
 
@@ -1413,7 +1412,7 @@ input[type="text"] {
 .form-control:active, .form-control:focus {
   outline: none;
   box-shadow: none;
-  border-color: #66D37E;
+  border-color: #0bd8bc;
 }
 
 .row-pb-md {
@@ -1472,5 +1471,6 @@ input[type="text"] {
   color: rgba(0, 0, 0, 0.3);
   font-weight: 400;
 }
+
 
 /*# sourceMappingURL=style.css.map */
