--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 *
 * ======================================================= */
 body {
-  font-family: "Roboto Salp", sans-serif;
+  font-family: "Roboto Salp";
   font-weight: 300;
   font-size: 14px;
   line-height: 1.7;
