--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 *
 * ======================================================= */
 body {
-  font-family: "Roboto Salp";
+  font-family: "Oxygen", sans-serif;
   font-weight: 300;
   font-size: 14px;
   line-height: 1.7;
@@ -64,8 +64,8 @@ p {
 
 h1, h2, h3, h4, h5, h6, figure {
   color: #000;
-  font-family: "Source Sans Pro", sans-serif;
-  font-weight: 400;
+  font-family: "Roboto Slap";
+  font-weight: 700;
   margin: 0 0 20px 0;
 }
 
@@ -412,13 +412,14 @@ h1, h2, h3, h4, h5, h6, figure {
   margin: 0;
   padding: 0;
   color: black;
-  font-family: "Oxygen", sans-serif;
+  font-family: "Roboto Salp";
+  font-weight: 700;
 }
 #fh5co-hero .flexslider .slider-text > .slider-text-inner h1 {
   margin-bottom: 20px;
   font-size: 30px;
   line-height: 1.3;
-  font-weight: 300;
+  font-weight: 700;
 }
 @media screen and (max-width: 768px) {
   #fh5co-hero .flexslider .slider-text > .slider-text-inner h1 {
@@ -429,6 +430,7 @@ h1, h2, h3, h4, h5, h6, figure {
   font-size: 18px;
   line-height: 1.5;
   margin-bottom: 30px;
+  color:gray;
 }
 #fh5co-hero .flexslider .slider-text > .slider-text-inner h2 a {
   color: rgba(102, 211, 126, 0.8);
@@ -501,9 +503,8 @@ h1, h2, h3, h4, h5, h6, figure {
   transition: 0.3s;
 }
 .services h3 {
-  font-size: 13px;
-  font-family: "Source Sans Pro", sans-serif;
-  text-transform: uppercase;
+  font-size: 18px;
+  font-family: "Roboto Slap";
   letter-spacing: 1px;
   font-weight: 700;
 }
@@ -786,7 +787,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 .blog-flex .featured-blog .desc-t h3 {
   font-weight: 700;
-  font-family: "Oxygen", sans-serif;
+  font-family: "Roboto Slap";
   font-size: 30px;
   margin-bottom: 10px;
   line-height: 40px;
@@ -826,12 +827,10 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 .blog-flex .blog-entry h2 {
   display: block;
-  font-size: 13px;
-  text-transform: uppercase;
+  font-size: 24px;
   letter-spacing: 1px;
   font-weight: 700;
-  margin-bottom: 40px;
-  color: rgba(0, 0, 0, 0.4);
+  margin-bottom: 40px;  
 }
 .blog-flex .blog-entry .blog-post {
   margin-bottom: 2.5em;
@@ -959,11 +958,11 @@ input[type="text"] {
   margin-bottom: 2em;
 }
 .fh5co-heading h2 {
-  font-size: 13px;
+  font-size: 18px;
   margin-bottom: 20px;
   line-height: 1.5;
   font-weight: 700;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Roboto Salp";
   letter-spacing: 1px;
   text-transform: uppercase;
   color: #000;
@@ -1477,12 +1476,3 @@ input[type="text"] {
 
 /*# sourceMappingURL=style.css.map */
 
-.flex-container {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-
-.center { 
-  -webkit-justify-content: center; 
-  justify-content: center; 
-}  
