--- a/css/style.css
+++ b/css/style.css
@@ -427,10 +427,11 @@ h1, h2, h3, h4, h5, h6, figure {
   }
 }
 #fh5co-hero .flexslider .slider-text > .slider-text-inner h2 {
+  font-family: "Oxygen", sans-serif;
   font-size: 18px;
   line-height: 1.5;
   margin-bottom: 30px;
-  color:gray;
+  color:black;
 }
 #fh5co-hero .flexslider .slider-text > .slider-text-inner h2 a {
   color: rgba(102, 211, 126, 0.8);
