--- a/css/embed.behance.css
+++ b/css/embed.behance.css
@@ -125,7 +125,7 @@ a:hover, a:active, a:focus {
 }
 
 .eb-container .wrap-title {
-	font-family: "Roboto Slap";
+	font-family: 'Roboto Slab', serif;
 	font-size: 20px;
 	font-weight: 900;
 	color:black;
