--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ p {
 
 h1, h2, h3, h4, h5, h6, figure {
   color: #000;
-  font-family: "Roboto Slap";
+  font-family: "Roboto Slab";
   font-weight: 700;
   margin: 0 0 20px 0;
 }
@@ -116,7 +116,7 @@ h1, h2, h3, h4, h5, h6, figure {
   font-size: 24px;
   margin: 0;
   padding: 0;
-  font-family: 'Roboto Slap';
+  font-family: 'Roboto Slab';
   font-weight: 700;
   }
 .fh5co-nav #fh5co-logo a span {
@@ -412,7 +412,7 @@ h1, h2, h3, h4, h5, h6, figure {
   margin: 0;
   padding: 0;
   color: black;
-  font-family: "Roboto Salp";
+  font-family: 'Roboto Slab', serif;
   font-weight: 700;
 }
 #fh5co-hero .flexslider .slider-text > .slider-text-inner h1 {
@@ -505,7 +505,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 .services h3 {
   font-size: 18px;
-  font-family: "Roboto Slap";
+  font-family: "Roboto Slab";
   letter-spacing: 1px;
   font-weight: 700;
 }
@@ -788,7 +788,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 .blog-flex .featured-blog .desc-t h3 {
   font-weight: 700;
-  font-family: "Roboto Slap";
+  font-family: "Roboto Slab";
   font-size: 30px;
   margin-bottom: 10px;
   line-height: 40px;
@@ -963,7 +963,7 @@ input[type="text"] {
   margin-bottom: 20px;
   line-height: 1.5;
   font-weight: 700;
-  font-family: "Roboto Salp";
+  font-family: 'Roboto Slab', serif;
   letter-spacing: 1px;
   text-transform: uppercase;
   color: #000;
