--- a/css/style.css
+++ b/css/style.css
@@ -90,10 +90,19 @@ h1, h2, h3, h4, h5, h6, figure {
   margin-bottom: 1em;
   background: #fff;
 }
+
+.container-logo{
+  max-width: 80%;
+}
+
 @media screen and (max-width: 768px) {
   .container-wrap {
     width: 100%;
   }
+
+  .container-logo{
+  max-width: 30%;
+}
 }
 
 .fh5co-nav {
@@ -555,6 +564,11 @@ h1, h2, h3, h4, h5, h6, figure {
   }
 }
 @media screen and (max-width: 480px) {
+
+  .container-logo{
+  max-width: 40%;
+  }
+
   .work {
     height: 270px;
   }
