--- a/css/embed.behance2.css
+++ b/css/embed.behance2.css
@@ -5,13 +5,13 @@
  */
 
 a {
-  color: #0bd8bc;
+  color: #0026ca;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 a:hover, a:active, a:focus {
-  color: #0bd8bc;
+  color: #304ffe;
   outline: none;
   text-decoration: none;
 }
@@ -101,13 +101,15 @@ a:hover, a:active, a:focus {
 	left: 0;
 	right: 0;
 	display: block;
-	margin:auto !important;
-	z-index: 1000000000;
+	margin: 25% 70%;
 	background-color: rgba(0,0,0,0.7);
 	border-radius: 50%;
+  	float: right;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
+	align-items: center;
+	justify-content: center;
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
@@ -125,8 +127,8 @@ a:hover, a:active, a:focus {
 }
 
 .eb-container .wrap-title {
-	font-family: 'Roboto Slab', serif;
-	font-size: 20px;
+	font-family: 'Comfortaa', sans-serif;
+	font-size: 16px;
 	font-weight: 900;
 	color:black;
 }
@@ -218,11 +220,11 @@ a:hover, a:active, a:focus {
 /* list: cover  */
 .eb-container .wrap-projects li .wrap-cover{
 	margin-bottom: 1.3em;
+	border-radius: 2%;
 	overflow: hidden;
 	clear: both; 
 	background-color: #000;
 	position: relative;
-	border-radius: 20px;
 }
 
 .eb-container .wrap-projects li .wrap-cover img{
@@ -233,7 +235,6 @@ a:hover, a:active, a:focus {
 	position: absolute;
     color: #fff;
     text-align: center;
-    font-size: 1.3em;
     font-weight: 700;
     line-height: normal;
     width: 100%;
@@ -352,7 +353,6 @@ body.eb-detail-modal-active{
 .eb-project-overlay{
 	position: fixed;
 	background-color: rgba(0,0,0,0.8);
-	width: 100%;
 	height: 100%;
 	top: 0;
 	left: 0;
@@ -720,6 +720,22 @@ body.eb-detail-modal-active{
 /* :::::::::::::::::::: media queries :::::::::::::::::::: */
 
 /* from 480px */
+@media screen and (min-width: 10em) {
+
+	.eb-pagination-button {
+		width: 11em;
+		margin: 0 auto;
+		padding: 1em;
+	}
+	.eb-container .wrap-projects > li {
+		margin-top: 15%;
+	}
+	.eb-container.box-project .box-inner-main{
+		margin-top: 0 !important;
+	}
+
+}
+
 @media screen and (min-width: 30em) {
 
 	.eb-pagination-button {
@@ -727,6 +743,10 @@ body.eb-detail-modal-active{
 		margin: 0 auto;
 		padding: 1em;
 	}
+	.eb-container .wrap-projects > li {
+		margin-top: 15%;
+	}
+
 
 }
 
@@ -740,9 +760,13 @@ body.eb-detail-modal-active{
 		margin-bottom: 0; 
 		border-bottom: 0;
 	}
+	.eb-container .wrap-projects li .wrap-cover{
+		margin-top: 0%;
+	}
 
 	.eb-container .wrap-projects > li {
 		margin-bottom: 10vmin;
+		margin-top: 0%;
 	}
 
 	/* enable hover on links */
@@ -803,9 +827,20 @@ body.eb-detail-modal-active{
 	.eb-container.box-project .box-inner-main{
 		margin-top: 0 !important;
 	}
-	.eb-container main, .eb-container .wrap-headings .inner{
+	.wrap-headings .inner{
 		margin-left: 0 !important;
 	}
+	.eb-container .wrap-projects li .wrap-cover{
+		margin-top: 0%;
+	}
+	.eb-container.box-project .wrap-headings {
+		padding-top: 25%;
+	}
+	.eb-container .close-project {
+		top: 9em;
+		right: 6%;
+	}	
+
 
 }
 
@@ -813,6 +848,10 @@ body.eb-detail-modal-active{
 /* from 960 */
 @media screen and (min-width: 60em) {
 	
+	.eb-container .wrap-projects li .wrap-cover{
+		margin-top: 0%;
+	}
+
 	.eb-container main .wrap-works-outer{
 		border-top: 0;
 	}
@@ -964,8 +1003,8 @@ body.eb-detail-modal-active{
 
 	/* 3 columns */
 	.eb-container .wrap-projects > li {
-		-ms-flex-preferred-size: 30%;
-		flex-basis: 31.3%;
+		-ms-flex-preferred-size: 47%;
+		flex-basis: 47%;
 	}
 
 	.eb-container .wrap-projects > li,
@@ -974,7 +1013,7 @@ body.eb-detail-modal-active{
 	}
 
 	.eb-container .wrap-projects > li:nth-child(3n) {
-		margin-right: 0;
+		margin-right: 3%;
 	}
 
 }
@@ -984,8 +1023,8 @@ body.eb-detail-modal-active{
 
 	/* 4 columns */
 	.eb-container .wrap-projects > li {
-		-ms-flex-preferred-size: 22%;
-		flex-basis: 22.6%;
+		-ms-flex-preferred-size: 30%;
+		flex-basis: 30%;
 	}
 
 	.eb-container .wrap-projects > li,
