--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ a {
   transition: 0.5s;
 }
 a:hover, a:active, a:focus {
-  color: #1a73e8;
+  color: #174ea6;
   outline: none;
   text-decoration: none;
 }
@@ -92,7 +92,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .container-logo{
-  max-width: 80%;
+  max-width: 90%;
 }
 
 @media screen and (max-width: 768px) {
@@ -122,12 +122,12 @@ h1, h2, h3, h4, h5, h6, figure {
   }
 }
 .fh5co-nav .top-menu {
-  padding: 34px 30px;
+  padding: 15px 35px;
   background-color: white;
 }
 @media screen and (max-width: 768px) {
   .fh5co-nav .top-menu {
-    padding: 28px 1em;
+    padding: 20px 1em;
     background-color: white;
   }
 }
@@ -1296,8 +1296,8 @@ input[type="text"] {
   border: 2px solid #1a73e8;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
-  background: #22f5d8 !important;
-  border-color: #22f5d8 !important;
+  background: #174ea6 !important;
+  border-color: #174ea6 !important;
 }
 .btn-primary.btn-outline {
   background: transparent;
@@ -1329,13 +1329,13 @@ input[type="text"] {
 }
 
 .btn-info {
-  background: #5bc0de;
+  background: #174ea6;
   color: #fff;
-  border: 2px solid #5bc0de;
+  border: 2px solid #174ea6;
 }
 .btn-info:hover, .btn-info:focus, .btn-info:active {
-  background: #46b8da !important;
-  border-color: #46b8da !important;
+  background: #174ea6 !important;
+  border-color: #174ea6 !important;
 }
 .btn-info.btn-outline {
   background: transparent;
